ui/assets/styles/dark-theme.css
/* ... */
  .sidebar .form-search {
    margin: 12px; }
  .sidebar .sidebar-nav {
    display: flex;
    flex-direction: column;
    flex: 1; }
  .sidebar .nav-user {
    margin-top: auto; }
  .sidebar .scrollable .scrollbar-track {
    z-index: 1000;
    background: rgba(135, 209, 255, 0.55); }
  .sidebar .scrollable .scrollbar-thumb {
    background: rgba(135, 209, 255, 0.85); }
  .sidebar .logo {
    position: relative;
    margin-right: 12px; }
    .sidebar .logo:active, .sidebar .logo:hover, .sidebar .logo:link, .sidebar .logo:visited {
      border: 0; }
    .sidebar .logo:focus .sidebar-logo {
      box-shadow: 0 0 0 2px rgba(66, 154, 227, 0.35); }
    .sidebar .logo .sidebar-logo-compact {
      position: absolute;
      top: 0;
      left: 0;
      opacity: 0; }
  .sidebar .button-hide,
  .sidebar .button-show,
  .sidebar .button-compact,
  .sidebar .button-expand {
    width: 24px;
    height: 24px;
    background: url("../img/icon-sprite.svg?20211222") no-repeat;
    border: none;
    border-radius: 0;
    text-indent: -9999px;
    opacity: .75; }
    .sidebar .button-hide:focus, .sidebar .button-hide:hover,
    .sidebar .button-show:focus,
    .sidebar .button-show:hover,
    .sidebar .button-compact:focus,
    .sidebar .button-compact:hover,
    .sidebar .button-expand:focus,
    .sidebar .button-expand:hover {
      opacity: 1; }
  .sidebar .button-hide {
    background-position: -540px -568px; }
  .sidebar .button-show {
    display: none;
    background-position: -570px -568px; }
  .sidebar .button-compact {
    background-position: -540px -544px; }
  .sidebar .button-expand {
    display: none;
    background-position: -540px -520px; }
  .sidebar .form-search .search {
    transition: opacity 0.3s; }
  .sidebar .form-search .search-icon {
    transition: transform 0.3s; }
  .sidebar.is-compact, .sidebar.is-hidden {
    position: fixed;
    top: 0;
    bottom: 0;
    box-shadow: 2px 0 6px rgba(0, 0, 0, 0.5); }
  .sidebar.is-compact + .wrapper {
    margin-left: 48px; }
  .sidebar.is-compact .button-compact,
  .sidebar.is-compact .button-show {
    display: none; }
  .sidebar.is-compact .button-expand,
  .sidebar.is-compact .button-hide {
    display: inline-block; }
  .sidebar.is-compact:not(.is-opened) {
    max-width: 48px !important; }
    .sidebar.is-compact:not(.is-opened) .scrollable .scrollbar-track {
      display: none; }
    .sidebar.is-compact:not(.is-opened) .logo .sidebar-logo {
      opacity: 0;
      transition: opacity 0s 0.3s; }
    .sidebar.is-compact:not(.is-opened) .logo .sidebar-logo-compact {
      opacity: 1;
      transition: opacity 0s 0.3s; }
    .sidebar.is-compact:not(.is-opened) .server-name {
      opacity: 0; }
    .sidebar.is-compact:not(.is-opened) .form-search {
      position: relative; }
      .sidebar.is-compact:not(.is-opened) .form-search .search {
        opacity: 0; }
      .sidebar.is-compact:not(.is-opened) .form-search .search-icon {
        opacity: 1;
        transform: scale(1); }
    .sidebar.is-compact:not(.is-opened) nav a {
      color: transparent; }
      .sidebar.is-compact:not(.is-opened) nav a::after {
        opacity: 0; }
    .sidebar.is-compact:not(.is-opened) .submenu {
      max-height: 0 !important; }
  .sidebar.is-hidden .button-show {
    display: inline-block; }
  .sidebar.is-hidden .button-compact,
  .sidebar.is-hidden .button-expand,
  .sidebar.is-hidden .button-hide {
    display: none; }
  .sidebar.is-hidden.focus-off {
    display: none; }
  .sidebar.is-hidden + .wrapper .sidebar-nav-toggle {
    display: block; }
  .sidebar.is-hidden:not(.is-opened) {
    transform: translate3d(-110%, 0, 0); }

.sidebar-nav-toggle {
  display: none;
  flex-shrink: 0;
  margin-right: 10px; }
  .sidebar-nav-toggle .button-toggle {
    width: 24px;
    height: 24px;
    background: url("../img/icon-sprite.svg?20211222") no-repeat -630px -592px;
    border: none;
    border-radius: 0;
    text-indent: -9999px;
    opacity: .75;
    transition: opacity 0.3s ease-out; }
    .sidebar-nav-toggle .button-toggle:hover {
      opacity: 1; }
  .sidebar-nav-toggle + div {
    flex-shrink: 1; }

.form-grid {
  display: grid;
  padding: 5px;
  row-gap: 10px;
  column-gap: 10px;
  grid-template-columns: minmax(15%, max-content) auto; }
  .form-grid.label-width-true {
    grid-template-columns: max-content auto; }
  .form-grid > label {
    line-height: 24px;
    text-align: right;
    word-wrap: break-word; }
  .form-grid .form-actions,
  .form-grid .form-field,
  .form-grid .field-fluid {
    grid-column: 2 / -1;
    text-align: left;
    line-height: 24px; }
  .form-grid .form-actions button:not(:first-of-type) {
    margin-left: 10px; }
  .form-grid .form-field.offset-1 {
    grid-column-start: 2 !important; }
  .form-grid .form-field.offset-2 {
    grid-column-start: 3 !important; }
  .form-grid .form-field.offset-3 {
    grid-column-start: 4 !important; }
  .form-grid .form-field table {
    width: 100%; }
  .form-grid .form-field th {
    padding: 0 5px 0 0;
    color: #737373; }
    .form-grid .form-field th:last-child {
      padding: 0; }
  .form-grid .form-field td {
    padding: 0 5px 5px 0; }
  .form-grid .form-field .list-check-radio {
    line-height: 1.4em; }
  .form-grid.form-grid-1-1 {
    grid-template-columns: repeat(2, minmax(15%, max-content) auto); }
    .form-grid.form-grid-1-1.label-width-true {
      grid-template-columns: repeat(2, max-content auto); }
  .form-grid.form-grid-3-1 {
    grid-template-columns: minmax(15%, max-content) 3fr max-content auto; }
    .form-grid.form-grid-3-1.label-width-true {
      grid-template-columns: max-content auto 3fr max-content auto; }
  .form-grid.form-grid-1-1 .form-field:not(.field-fluid), .form-grid.form-grid-3-1 .form-field:not(.field-fluid) {
    grid-column-start: initial;
    grid-column-end: span 1; }
  .form-grid .table-forms-separator {
    display: inline-flex;
    line-height: 1.4; }
    .form-grid .table-forms-separator td {
      padding: 5px 5px 5px 0; }
/* ... */

